style: Show mail address on the mockup

--- a/hospital-website-mockup/6.html
+++ b/hospital-website-mockup/6.html
@@ -169,7 +169,7 @@
             </tr>
             <tr>
               <td class="adr_LB">アドレス</td>
-              <td class="adr_RB"></td>
+              <td class="adr_RB">m.date@sendai.com</td>
             </tr>
           </tbody>
         </table>
